--- a/index.html
+++ b/index.html
@@ -432,11 +432,57 @@
             </li>
           </ul>
         </div>
+        <form>
+          <legend class="descrition-title-footer">Zapisz się do newslettera</legend>
+          <div class="border-footer">
+            <label class="mail-text">
+              <input class="border-mail" type="email" name="email" required placeholder="E-mail" />
+            </label>
+            <button class="button1 button-send" type="submit">
+              <p>Zapisz się</p>
+              <svg class="send-icon" width="24" height="24">
+                <use href="images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <form class="modal-form">
+          <fieldset class="form-box">
+            <legend class="form-title">Zostaw swoje dane w formularzu poniżej</legend>
+
+            <!-- Można też tak -->
+            <!-- <label>Imię<input type="name" name="name" required /> </label>
+            <label>Telefon<input type="tel" name=Telefon" required /> </label>
+            <label>Email<input type="email" name="Email" required /> </label> -->
+            <!-- <label
+              >Komentarz
+              <textarea name="Komentarz" placeholder="Wprowadź tekst"></textarea>
+            </label> -->
+
+            <label for="name">Imię</label>
+            <input type="name" name="name" id="name" />
+
+            <label for="phone">Telefon</label>
+            <input type="tel" name="Telefon" id="phone" />
+            <label for="user_email">Email</label>
+            <input type="email" name="email" id="user_email" />
+            <label for="comments">Komentarz</label>
+            <textarea name="Komentarz" id="comments" placeholder="Wprowadź tekst"></textarea>
+          </fieldset>
+          <label class="form-terms">
+            <input type="checkbox" name="terms" />
+            Oświadczam iż akceptuję <a class="form-terms-links" href="#terms">Regulamin</a> i
+            <a class="form-terms-links" href="#politics">Politykę Prywatności</a>.
+          </label>
+          <div class="form-button-send">
+            <button class="button1" type="submit">Wyślij</button>
+          </div>
+        </form>
         <button type="button" class="button-close" data-modal-close>
           <svg width="18" height="18">
             <use href="images/icons.svg#icon-close-black-18dp-2-1"></use>
