--- a/portfolio.html
+++ b/portfolio.html
@@ -341,6 +341,20 @@
             </li>
           </ul>
         </div>
+        <form>
+          <legend class="descrition-title-footer">Zapisz się do newslettera</legend>
+          <div class="border-footer">
+            <label class="mail-text">
+              <input class="border-mail" type="email" name="email" required placeholder="E-mail" />
+            </label>
+            <button class="button1 button-send" type="submit">
+              <p>Zapisz się</p>
+              <svg class="send-icon" width="24" height="24">
+                <use href="images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
     <script src="js/modal.js"></script>
