--- a/index.html
+++ b/index.html
@@ -465,12 +465,26 @@
             </label> -->
 
             <label for="name">Imię</label>
-            <input type="name" name="name" id="name" />
-
+            <div class="form-icon">
+              <input type="name" name="name" id="name" />
+              <svg class="form-icon-svg" width="18" height="18">
+                <use href="images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
             <label for="phone">Telefon</label>
-            <input type="tel" name="Telefon" id="phone" />
+            <div class="form-icon">
+              <input type="tel" name="Telefon" id="phone" />
+              <svg class="form-icon-svg" width="18" height="18">
+                <use href="images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
             <label for="user_email">Email</label>
-            <input type="email" name="email" id="user_email" />
+            <div class="form-icon">
+              <input type="email" name="email" id="user_email" />
+              <svg class="form-icon-svg" width="18" height="18">
+                <use href="images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
             <label for="comments">Komentarz</label>
             <textarea name="Komentarz" id="comments" placeholder="Wprowadź tekst"></textarea>
           </fieldset>
