--- a/index.html
+++ b/index.html
@@ -455,11 +455,16 @@
           <fieldset class="form-box">
             <legend class="form-title">Zostaw swoje dane w formularzu poniżej</legend>
 
-            <!-- Można też tak -->
-            <!-- <label>Imię<input type="name" name="name" required /> </label>
-            <label>Telefon<input type="tel" name=Telefon" required /> </label>
-            <label>Email<input type="email" name="Email" required /> </label> -->
-            <!-- <label
+            <!-- <label class="form-icon"
+              >Imię<input type="name" name="name" required />
+              <svg class="form-icon-svg" width="18" height="18">
+                <use href="images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </label> -->
+
+            <!-- <label>Telefon<input type="tel" name=Telefon" required /> </label>
+            <label>Email<input type="email" name="Email" required /> </label>
+           <label
               >Komentarz
               <textarea name="Komentarz" placeholder="Wprowadź tekst"></textarea>
             </label> -->
@@ -467,7 +472,7 @@
             <label for="name">Imię</label>
             <div class="form-icon">
               <input type="name" name="name" id="name" />
-              <svg class="form-icon-svg" width="18" height="18">
+              <svg class="form-icon-svg" id="name" width="18" height="18">
                 <use href="images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
@@ -488,11 +493,20 @@
             <label for="comments">Komentarz</label>
             <textarea name="Komentarz" id="comments" placeholder="Wprowadź tekst"></textarea>
           </fieldset>
-          <label class="form-terms">
+          <div class="form-terms">
             <input type="checkbox" name="terms" />
-            Oświadczam iż akceptuję <a class="form-terms-links" href="#terms">Regulamin</a> i
-            <a class="form-terms-links" href="#politics">Politykę Prywatności</a>.
-          </label>
+            <svg class="form-terms-svg" width="16" height="15">
+              <use href="images/icons.svg#icon-icon-check"></use>
+            </svg>
+            <svg class="form-terms-box" width="16" height="15">
+              <use href="images/icons.svg#icon-Vector-1"></use>
+            </svg>
+
+            <p>
+              Oświadczam iż akceptuję <a class="form-terms-links" href="#terms">Regulamin</a> i
+              <a class="form-terms-links" href="#politics">Politykę Prywatności</a>.
+            </p>
+          </div>
           <div class="form-button-send">
             <button class="button1" type="submit">Wyślij</button>
           </div>
