--- a/index.html
+++ b/index.html
@@ -454,55 +454,50 @@
         <form class="modal-form">
           <fieldset class="form-box">
             <legend class="form-title">Zostaw swoje dane w formularzu poniżej</legend>
-
-            <!-- <label class="form-icon"
-              >Imię<input type="name" name="name" required />
-              <svg class="form-icon-svg" width="18" height="18">
+            <label class="form-label">
+              Imię
+              <input class="form-input" type="name" name="name" required />
+              <svg class="form-icon-svg" id="icon-person-black-18dp-1" width="18" height="18">
                 <use href="images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
-            </label> -->
-
-            <!-- <label>Telefon<input type="tel" name=Telefon" required /> </label>
-            <label>Email<input type="email" name="Email" required /> </label>
-           <label
-              >Komentarz
-              <textarea name="Komentarz" placeholder="Wprowadź tekst"></textarea>
-            </label> -->
-
-            <label for="name">Imię</label>
-            <div class="form-icon">
-              <input type="name" name="name" id="name" />
-              <svg class="form-icon-svg" id="name" width="18" height="18">
-                <use href="images/icons.svg#icon-person-black-18dp-1"></use>
-              </svg>
-            </div>
-            <label for="phone">Telefon</label>
-            <div class="form-icon">
-              <input type="tel" name="Telefon" id="phone" />
-              <svg class="form-icon-svg" width="18" height="18">
+            </label>
+            <label class="form-label"
+              >Telefon
+              <input class="form-input" type="tel" name="telefon" required />
+              <svg class="form-icon-svg" id="icon-phone-black-18dp-1" width="18" height="18">
                 <use href="images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
-            </div>
-            <label for="user_email">Email</label>
-            <div class="form-icon">
-              <input type="email" name="email" id="user_email" />
-              <svg class="form-icon-svg" width="18" height="18">
-                <use href="images/icons.svg#icon-person-black-18dp-1"></use>
+            </label>
+            <label class="form-label"
+              >Email
+              <input class="form-input" type="email" name="email" required />
+              <svg class="form-icon-svg" id="icon-email-black-18dp-1" width="18" height="18">
+                <use href="images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
-            </div>
-            <label for="comments">Komentarz</label>
-            <textarea name="Komentarz" id="comments" placeholder="Wprowadź tekst"></textarea>
-          </fieldset>
-          <div class="form-terms">
-            <input type="checkbox" name="terms" />
-            <svg class="form-terms-svg" width="16" height="15">
-              <use href="images/icons.svg#icon-icon-check"></use>
-            </svg>
-            <svg class="form-terms-box" width="16" height="15">
-              <use href="images/icons.svg#icon-Vector-1"></use>
-            </svg>
+            </label>
 
-            <p>
+            <label class="form-label"
+              >Komentarz
+              <textarea
+                class="form-text"
+                name="Komentarz"
+                placeholder="Wprowadź tekst"
+                optional
+              ></textarea>
+            </label>
+          </fieldset>
+
+          <div class="form-terms">
+            <label class="form-terms-label">
+              <input class="form-terms-input" type="checkbox" name="terms" />
+              <svg class="form-terms-svg" width="16" height="15">
+                <use href="images/icons.svg#icon-icon-check"></use>
+              </svg>
+              <svg class="form-terms-box" width="16" height="15">
+                <use href="images/icons.svg#icon-Vector-1"></use>
+              </svg>
+            </label>
+            <p class="form-terms-text">
               Oświadczam iż akceptuję <a class="form-terms-links" href="#terms">Regulamin</a> i
               <a class="form-terms-links" href="#politics">Politykę Prywatności</a>.
             </p>
