--- a/portfolio.html
+++ b/portfolio.html
@@ -342,13 +342,13 @@
           </ul>
         </div>
         <form>
-          <legend class="descrition-title-footer">Zapisz się do newslettera</legend>
+          <p class="descrition-title-footer">Zapisz się do newslettera</p>
           <div class="border-footer">
             <label class="mail-text">
               <input class="border-mail" type="email" name="email" required placeholder="E-mail" />
             </label>
             <button class="button1 button-send" type="submit">
-              <p>Zapisz się</p>
+              Zapisz się
               <svg class="send-icon" width="24" height="24">
                 <use href="images/icons.svg#icon-icon-send"></use>
               </svg>
