--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
           </ul>
         </div>
         <form>
-          <legend class="descrition-title-footer">Zapisz się do newslettera</legend>
+          <p class="descrition-title-footer">Zapisz się do newslettera</p>
           <div class="border-footer">
             <label class="mail-text">
               <input class="border-mail" type="email" name="email" required placeholder="E-mail" />
             </label>
             <button class="button1 button-send" type="submit">
-              <p>Zapisz się</p>
+              Zapisz się
               <svg class="send-icon" width="24" height="24">
                 <use href="images/icons.svg#icon-icon-send"></use>
               </svg>
@@ -456,7 +456,7 @@
             <legend class="form-title">Zostaw swoje dane w formularzu poniżej</legend>
             <label class="form-label">
               Imię
-              <input class="form-input" type="name" name="name" required />
+              <input class="form-input" type="text" name="name" required />
               <svg class="form-icon-svg" id="icon-person-black-18dp-1" width="18" height="18">
                 <use href="images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
@@ -478,12 +478,7 @@
 
             <label class="form-label"
               >Komentarz
-              <textarea
-                class="form-text"
-                name="Komentarz"
-                placeholder="Wprowadź tekst"
-                optional
-              ></textarea>
+              <textarea class="form-text" name="Komentarz" placeholder="Wprowadź tekst"></textarea>
             </label>
           </fieldset>
 
